--- a/views/home.html
+++ b/views/home.html
@@ -21,75 +21,14 @@
                     <input type="hidden" name="redirect_to" value="https://watchtvepisodes.me/"></form>
             </div>
         </div>
-        <div class="letter_home">
-            <div class="fixresp">
-                <ul class="glossary">
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="09">#</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="a">A</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="b">B</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="c">C</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="d">D</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="e">E</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="f">F</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="g">G</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="h">H</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="i">I</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="j">J</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="k">K</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="l">L</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="m">M</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="n">N</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="o">O</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="p">P</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="q">Q</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="r">R</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="s">S</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="t">T</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="u">U</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="v">V</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="w">W</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="x">X</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="y">Y</a></li>
-                    <li>
-                        <a class="lglossary" data-type="all" data-glossary="z">Z</a></li>
-                </ul>
-            </div>
-            <div class="items_glossary"></div>
-        </div>
         <div class="module">
             <div class="content">
                 <div id="featload" class="load_modules">Loading..</div>
                 <style>.rpwe-block ul{list-style:none !important;margin-left:0 !important;padding-left:0 !important;width:100%;height:770px;box-shadow:0 8px 8px 0 rgba(0,0,0,0.2),0 12px 30px 0 rgba(0,0,0,0.19)}.rpwe-block li{border-bottom:1px solid rgba(255,255,255,0);margin-bottom:4px;padding-bottom:1px;list-style-type:none;border-radius:25px;background:#21212180;padding-left:10px}.rpwe-block a{display:inline !important;text-decoration:none}.rpwe-block h3{background:none !important;clear:none;margin-bottom:0 !important;margin-top:0 !important;font-weight:400;font-size:15px !important;line-height:1.5em;text-align:center}.rpwe-thumb{border:1px solid #eee !important;box-shadow:none !important;margin:2px 10px 2px 0;padding:3px !important}.rpwe-summary{font-size:12px}.rpwe-time{color:#ffffff;font-size:12px;text-align:right}.rpwe-comment{color:#bbb;font-size:11px;padding-left:5px}.rpwe-alignleft{display:inline;float:left}.rpwe-alignright{display:inline;float:right}.rpwe-aligncenter{display:block;margin-left:auto;margin-right:auto}.rpwe-clearfix:before,.rpwe-clearfix:after{content:"";display:table !important}.rpwe-clearfix:after{clear:both}.rpwe-clearfix{zoom:1}</style>
                 <header>
-                    <h2>📌 New Movie Added !</h2>
+                    <h2>Popular shows</h2>
                     <span>
-                <a href="https://watchtvepisodes.me/tvshows/" class="see-all">See all</a></span>
+                <a href="/movies" class="see-all">See all</a></span>
                 </header>
                 <div id="tvload" class="load_modules">Loading..</div>
                 <div class="items">
@@ -117,26 +56,10 @@
             <div class="sidebar scrolling">
                 <div class="fixed-sidebar-blank">
                     <aside id="media_image-7" class="widget widget_media_image">
-                        <a href="/network/netflix/">
-                            <img width="300" height="169" src="https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-300x169.png" class="image wp-image-93020 attachment-medium size-medium" alt="" style="max-width: 100%; height: auto;" srcset="https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-300x170.png 300w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-768x432.png 768w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-1024x576.png 1024w" sizes="(max-width: 300px) 100vw, 300px" /></a>
+                        <a href="/movies">
+                            <img width="300" height="169" src="https://img1.ak.crunchyroll.com/i/spire2/54c15675670ba44c1f98c3e11ba0cddf1515030877_thumb.jpg" class="image wp-image-93020 attachment-medium size-medium" alt="" style="max-width: 100%; height: auto;" srcset="https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-300x170.png 300w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-768x432.png 768w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-1024x576.png 1024w" sizes="(max-width: 300px) 100vw, 300px" /></a>
                     </aside>
-                    <aside id="custom_html-2" class="widget_text widget widget_custom_html">
-                        <div class="textwidget custom-html-widget">
-                            <a href="https://watchtvepisodes.me/tvshows/game-of-thrones/">
-                                <img src="https://watchtvepisodes.me/wp-content/uploads/2019/02/UbzQQ2C-1.png" alt="" width="300" height="550" class="alignnone size-full wp-image-95958" /></a>
-                        </div>
-                    </aside>
-                    <aside id="media_image-6" class="widget widget_media_image">
-                        <h2 class="widget-title">Save this Site :</h2>
-                        <img width="300" height="190" src="https://watchtvepisodes.me/wp-content/uploads/2019/01/ctrl21-300x190.png" class="image wp-image-91291 attachment-medium size-medium" alt="" style="max-width: 100%; height: auto;" srcset="https://watchtvepisodes.me/wp-content/uploads/2019/01/ctrl21-300x190.png 300w, https://watchtvepisodes.me/wp-content/uploads/2019/01/ctrl21.png 333w" sizes="(max-width: 300px) 100vw, 300px" /></aside>
-                    <aside id="custom_html-3" class="widget_text widget widget_custom_html">
-                        <h2 class="widget-title">Watch The Walking Dead Online !</h2>
-                        <div class="textwidget custom-html-widget">
-                            <a href="https://watchtvepisodes.me/tvshows/the-walking-dead/">
-                                <img src="https://i.imgur.com/FsIaPWy.jpg" alt="" width="300" height="550" class="alignnone size-full wp-image-95958" /></a>
-                        </div>
-                    </aside>
-                </div>
+                  </div>
             </div>
         </div>
     </div>
