--- a/views/movies.html
+++ b/views/movies.html
@@ -16,45 +16,10 @@
                                                          value="https://watchtvepisodes.me/movies/"></form>
             </div>
         </div>
-        <div class="letter_home">
-            <div class="fixresp">
-                <!--字母排序-->
-                <ul class="glossary">
-                    <li><a class="lglossary" data-type="movies" data-glossary="09">#</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="a">A</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="b">B</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="c">C</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="d">D</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="e">E</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="f">F</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="g">G</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="h">H</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="i">I</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="j">J</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="k">K</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="l">L</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="m">M</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="n">N</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="o">O</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="p">P</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="q">Q</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="r">R</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="s">S</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="t">T</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="u">U</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="v">V</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="w">W</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="x">X</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="y">Y</a></li>
-                    <li><a class="lglossary" data-type="movies" data-glossary="z">Z</a></li>
-                </ul>
-            </div>
-            <div class="items_glossary"></div>
-        </div>
         <div class="module">
             <div class="content">
                 <div id="featload" class="load_modules">Loading..</div>
-                <header class="archive_post"><h1>Shows </h1><span>105</span></header>
+                <header class="archive_post"><h1>Shows </h1><span>{{.moviesCount}}</span></header>
 
                 <div id="archive-content" class="animation-2 items">
                     {{range .moviesList}}
@@ -71,15 +36,15 @@
                             </a></div>
                         <div class="data"><h3>
                                 <a href="/episode/{{.Id}}">
-                                    {{.MovieName}}
+                                    {{.DeName}}
                                 </a></h3>
                         </div>
                         <div class="animation-1 dtinfo">
-                            <div class="title"><h4>{{.MovieName}}</h4></div>
+                            <div class="title"><h4>{{.DeName}}</h4></div>
                             <div class="metadata"><span class="imdb">Mark:{{.MovieMark}}</span>
                             </div>
                             <div class="texto">
-                                {{.Info}}
+                                {{.DeInfo}}
                             </div>
                         </div>
                     </article>
@@ -93,7 +58,7 @@
                     <a href='/movies/page/{{add .PageIndex 1}}/' class="inactive">{{add .PageIndex 1}}</a>
                     <a href='/movies/page/{{add .PageIndex 1}}/' class="inactive">{{add .PageIndex 2}}</a>
                     <a class='arrow_pag' href="/movies/page/{{add .PageIndex 2}}/">
-                        <i id='nextpagination' class='icon-caret-right'>{{add .PageIndex 2}}</i>
+                        <i id='nextpagination' class='icon-caret-right'>{{add .PageIndex 1}}</i>
                     </a>
                 </div>
                 <div class='resppages'>
@@ -106,114 +71,14 @@
                 <div class="fixed-sidebar-blank">
                     <aside id="media_image-7" class="widget widget_media_image"><a href="/network/netflix/"><img
                                     width="300" height="169"
-                                    src="https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-300x169.png"
+                                    src="https://img1.ak.crunchyroll.com/i/spire4/f26a43ba646fa169a232726fe578d0cd1279145968_thumb.jpg"
                                     class="image wp-image-93020 attachment-medium size-medium" alt=""
                                     style="max-width: 100%; height: auto;"
-                                    srcset="https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-300x170.png 300w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-768x432.png 768w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-1024x576.png 1024w"
+                                    srcset=""
                                     sizes="(max-width: 300px) 100vw, 300px"/></a></aside>
-                    <div class="dt_mainmeta">
-                        <nav class="genres"><h2>Genres</h2>
-                            <ul class="genres scrolling">
-                                <li class="cat-item cat-item-47"><a href="https://watchtvepisodes.me/genre/action/">Action</a>
-                                    <i>1,992</i></li>
-                                <li class="cat-item cat-item-188"><a
-                                            href="https://watchtvepisodes.me/genre/action-adventure/">Action &amp;
-                                        Adventure</a> <i>164</i></li>
-                                <li class="cat-item cat-item-5809"><a href="https://watchtvepisodes.me/genre/adult/"
-                                                                      title="You are about to enter a page that may contain content of an adult nature. This page is designed for 18+ only and may include pictures and materials that some viewers may find offensive. If you are under the age of 18, if such material offends you or if it is illegal to view such material in your community please do not continue. ">Adult
-                                        🔞</a> <i>102</i></li>
-                                <li class="cat-item cat-item-48"><a href="https://watchtvepisodes.me/genre/adventure/">Adventure</a>
-                                    <i>1,148</i></li>
-                                <li class="cat-item cat-item-16"><a href="https://watchtvepisodes.me/genre/animation/">Animation</a>
-                                    <i>644</i></li>
-                                <li class="cat-item cat-item-46373"><a
-                                            href="https://watchtvepisodes.me/genre/bollywood/">Bollywood</a> <i>14</i>
-                                </li>
-                                <li class="cat-item cat-item-106"><a href="https://watchtvepisodes.me/genre/comedy/">Comedy</a>
-                                    <i>3,211</i></li>
-                                <li class="cat-item cat-item-183"><a href="https://watchtvepisodes.me/genre/crime/">Crime</a>
-                                    <i>1,387</i></li>
-                                <li class="cat-item cat-item-561"><a
-                                            href="https://watchtvepisodes.me/genre/documentary/">Documentary</a>
-                                    <i>991</i></li>
-                                <li class="cat-item cat-item-61"><a
-                                            href="https://watchtvepisodes.me/genre/drama/">Drama</a> <i>4,655</i></li>
-                                <li class="cat-item cat-item-15"><a href="https://watchtvepisodes.me/genre/family/">Family</a>
-                                    <i>828</i></li>
-                                <li class="cat-item cat-item-32"><a href="https://watchtvepisodes.me/genre/fantasy/">Fantasy</a>
-                                    <i>680</i></li>
-                                <li class="cat-item cat-item-74"><a href="https://watchtvepisodes.me/genre/history/">History</a>
-                                    <i>294</i></li>
-                                <li class="cat-item cat-item-33"><a href="https://watchtvepisodes.me/genre/horror/">Horror</a>
-                                    <i>1,683</i></li>
-                                <li class="cat-item cat-item-2412"><a
-                                            href="https://watchtvepisodes.me/genre/kids/">Kids</a> <i>30</i></li>
-                                <li class="cat-item cat-item-46385"><a href="https://watchtvepisodes.me/genre/korean/">Korean</a>
-                                    <i>21</i></li>
-                                <li class="cat-item cat-item-489"><a href="https://watchtvepisodes.me/genre/music/">Music</a>
-                                    <i>338</i></li>
-                                <li class="cat-item cat-item-11456"><a href="https://watchtvepisodes.me/genre/musical/">Musical</a>
-                                    <i>4</i></li>
-                                <li class="cat-item cat-item-34"><a href="https://watchtvepisodes.me/genre/mystery/">Mystery</a>
-                                    <i>879</i></li>
-                                <li class="cat-item cat-item-197"><a
-                                            href="https://watchtvepisodes.me/genre/news/">News</a> <i>18</i></li>
-                                <li class="cat-item cat-item-369"><a href="https://watchtvepisodes.me/genre/reality/">Reality</a>
-                                    <i>363</i></li>
-                                <li class="cat-item cat-item-62"><a href="https://watchtvepisodes.me/genre/romance/">Romance</a>
-                                    <i>1,329</i></li>
-                                <li class="cat-item cat-item-157"><a
-                                            href="https://watchtvepisodes.me/genre/sci-fi-fantasy/">Sci-Fi &amp;
-                                        Fantasy</a> <i>217</i></li>
-                                <li class="cat-item cat-item-49"><a
-                                            href="https://watchtvepisodes.me/genre/science-fiction/">Science Fiction</a>
-                                    <i>1,004</i></li>
-                                <li class="cat-item cat-item-3140"><a
-                                            href="https://watchtvepisodes.me/genre/soap/">Soap</a> <i>8</i></li>
-                                <li class="cat-item cat-item-783"><a
-                                            href="https://watchtvepisodes.me/genre/talk/">Talk</a> <i>49</i></li>
-                                <li class="cat-item cat-item-35"><a href="https://watchtvepisodes.me/genre/thriller/">Thriller</a>
-                                    <i>2,559</i></li>
-                                <li class="cat-item cat-item-24471"><a href="https://watchtvepisodes.me/genre/trailers/"
-                                                                       title="Here you will find only the trailers for the films that will appear in the future !">Trailers</a>
-                                    <i>4</i></li>
-                                <li class="cat-item cat-item-2060"><a href="https://watchtvepisodes.me/genre/tv-movie/">TV
-                                        Movie</a> <i>341</i></li>
-                                <li class="cat-item cat-item-522"><a
-                                            href="https://watchtvepisodes.me/genre/war/">War</a> <i>221</i></li>
-                                <li class="cat-item cat-item-198"><a
-                                            href="https://watchtvepisodes.me/genre/war-politics/">War &amp; Politics</a>
-                                    <i>17</i></li>
-                                <li class="cat-item cat-item-324"><a href="https://watchtvepisodes.me/genre/western/">Western</a>
-                                    <i>157</i></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="dt_mainmeta">
-                        <nav class="releases"><h2>Release year</h2>
-                            <ul class="releases scrolling">
-                                <li><a href="https://watchtvepisodes.me/release/2020/">2020</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <aside id="custom_html-2" class="widget_text widget widget_custom_html">
-                        <div class="textwidget custom-html-widget"><a
-                                    href="https://watchtvepisodes.me/tvshows/game-of-thrones/"><img
-                                        src="https://watchtvepisodes.me/wp-content/uploads/2019/02/UbzQQ2C-1.png" alt=""
-                                        width="300" height="550" class="alignnone size-full wp-image-95958"/></a></div>
-                    </aside>
-                    <aside id="media_image-6" class="widget widget_media_image"><h2 class="widget-title">Save this Site
-                            :</h2><img width="300" height="190"
-                                       src="https://watchtvepisodes.me/wp-content/uploads/2019/01/ctrl21-300x190.png"
-                                       class="image wp-image-91291 attachment-medium size-medium" alt=""
-                                       style="max-width: 100%; height: auto;"
-                                       srcset="https://watchtvepisodes.me/wp-content/uploads/2019/01/ctrl21-300x190.png 300w, https://watchtvepisodes.me/wp-content/uploads/2019/01/ctrl21.png 333w"
-                                       sizes="(max-width: 300px) 100vw, 300px"/></aside>
-                    <aside id="custom_html-3" class="widget_text widget widget_custom_html"><h2 class="widget-title">
-                            Watch The Walking Dead Online !</h2>
                         <div class="textwidget custom-html-widget"><a
                                     href="https://watchtvepisodes.me/tvshows/the-walking-dead/"><img
-                                        src="https://i.imgur.com/FsIaPWy.jpg" alt="" width="300" height="550"
+                                        src="https://img1.ak.crunchyroll.com/i/spire1/445d2fd74c924440b1ca61600789e2861383180162_thumb.jpg" alt="" width="300" height="550"
                                         class="alignnone size-full wp-image-95958"/></a></div>
                     </aside>
                 </div>
