添加播放页面 调整语言

--- a/views/common/header.html
+++ b/views/common/header.html
@@ -2,37 +2,12 @@
 <html lang="en-US">
 
 <head>
-{{/*    <script data-cfasync="false" type="text/javascript" src="//drjgjngf.com/t/9/fret/meow4/1591634/brt.js"></script>*/}}
-{{/*    <script type='text/javascript' src='//ig0nr8hhhb.com/a0/8e/14/a08e14d0cc2c7d55b4c012740659274c.js'></script>*/}}
-{{/*    <script data-cfasync="false" src="//d3t5ngjixpjdho.cloudfront.net/?jgntd=720831"></script>*/}}
-{{/*    <script type="text/javascript" data-cfasync="false">var _pop = _pop || [];*/}}
-{{/*        _pop.push(['siteId', 2525599]);*/}}
-{{/*        _pop.push(['minBid', 0]);*/}}
-{{/*        _pop.push(['popundersPerIP', 2]);*/}}
-{{/*        _pop.push(['delayBetween', 0]);*/}}
-{{/*        _pop.push(['default', false]);*/}}
-{{/*        _pop.push(['defaultPerDay', 0]);*/}}
-{{/*        _pop.push(['topmostLayer', true]); (function() {*/}}
-{{/*            var pa = document.createElement('script');*/}}
-{{/*            pa.type = 'text/javascript';*/}}
-{{/*            pa.async = true;*/}}
-{{/*            var s = document.getElementsByTagName('script')[0];*/}}
-{{/*            pa.src = '//c1.popads.net/pop.js';*/}}
-{{/*            pa.onerror = function() {*/}}
-{{/*                var sa = document.createElement('script');*/}}
-{{/*                sa.type = 'text/javascript';*/}}
-{{/*                sa.async = true;*/}}
-{{/*                sa.src = '//c2.popads.net/pop.js';*/}}
-{{/*                s.parentNode.insertBefore(sa, s);*/}}
-{{/*            };*/}}
-{{/*            s.parentNode.insertBefore(pa, s);*/}}
-{{/*        })();</script>*/}}
+
     <meta charset="UTF-8" />
     <link rel='apple-touch-icon' href='https://watchtvepisodes.me/wp-content/uploads/2018/11/TV.png' />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="mobile-web-app-capable" content="yes">
-{{/*    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">*/}}
     <meta property="fb:admins" content="Warlam" />
     <title>WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free</title>
     <meta name="description" content="Watch Full Movie Stream and TV Series Online Free Stream in HD and 1080p on Openload. Watch movies in theaters online , free cinema movie stream and download." />
@@ -174,65 +149,37 @@
                             <a href="/genre/action/">Genre</a>
                             <ul class="sub-menu">
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="https://watchtvepisodes.me/genre/adult/">🔞 Adult 18+</a></li>
+                                    <a href="">Aktion</a></li>
                                 <li id="menu-item-73949" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73949">
-                                    <a href="https://watchtvepisodes.me/genre/bollywood/">Bollywood 📂</a></li>
+                                    <a href="">Abenteuer</a></li>
                                 <li id="menu-item-73955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73955">
-                                    <a href="https://watchtvepisodes.me/genre/korean/">Korean 📂</a></li>
+                                    <a href="">Komödie</a></li>
                                 <li id="menu-item-4971" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4971">
-                                    <a href="https://watchtvepisodes.me/genre/soap/">Soap</a></li>
+                                    <a href="">Theater</a></li>
                                 <li id="menu-item-4970" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4970">
-                                    <a href="https://watchtvepisodes.me/genre/science-fiction/">Science Fiction</a></li>
+                                    <a href="">Fantasie</a></li>
                                 <li id="menu-item-4969" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4969">
-                                    <a href="https://watchtvepisodes.me/genre/sci-fi-fantasy/">Sci-Fi &#038; Fantasy</a></li>
+                                    <a href="">Harem</a></li>
                                 <li id="menu-item-4968" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4968">
-                                    <a href="https://watchtvepisodes.me/genre/romance/">Romance</a></li>
+                                    <a href="">Historisches
+                                    </a></li>
                                 <li id="menu-item-4967" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4967">
-                                    <a href="https://watchtvepisodes.me/genre/reality/">Reality</a></li>
+                                    <a href="">Idole</a></li>
                                 <li id="menu-item-4966" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4966">
-                                    <a href="https://watchtvepisodes.me/genre/news/">News</a></li>
+                                    <a href="">Isekai</a></li>
                                 <li id="menu-item-4965" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4965">
-                                    <a href="https://watchtvepisodes.me/genre/mystery/">Mystery</a></li>
+                                    <a href="">Magische</a></li>
                                 <li id="menu-item-4964" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4964">
-                                    <a href="https://watchtvepisodes.me/genre/music/">Music</a></li>
+                                    <a href="">Mädchen</a></li>
                                 <li id="menu-item-4963" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4963">
-                                    <a href="https://watchtvepisodes.me/genre/kids/">Kids</a></li>
+                                    <a href="">Mecha</a></li>
                                 <li id="menu-item-4962" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4962">
-                                    <a href="https://watchtvepisodes.me/genre/horror/">Horror</a></li>
+                                    <a href="">Musik</a></li>
                                 <li id="menu-item-4961" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4961">
-                                    <a href="https://watchtvepisodes.me/genre/history/">History</a></li>
+                                    <a href="">Geheimnis</a></li>
                                 <li id="menu-item-4960" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4960">
-                                    <a href="https://watchtvepisodes.me/genre/fantasy/">Fantasy</a></li>
-                                <li id="menu-item-4959" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4959">
-                                    <a href="https://watchtvepisodes.me/genre/family/">Family</a></li>
-                                <li id="menu-item-4958" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4958">
-                                    <a href="https://watchtvepisodes.me/genre/drama/">Drama</a></li>
-                                <li id="menu-item-4957" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4957">
-                                    <a href="https://watchtvepisodes.me/genre/documentary/">Documentary</a></li>
-                                <li id="menu-item-4956" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4956">
-                                    <a href="https://watchtvepisodes.me/genre/crime/">Crime</a></li>
-                                <li id="menu-item-4955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4955">
-                                    <a href="https://watchtvepisodes.me/genre/comedy/">Comedy</a></li>
-                                <li id="menu-item-4954" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4954">
-                                    <a href="https://watchtvepisodes.me/genre/animation/">Animation</a></li>
-                                <li id="menu-item-4951" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4951">
-                                    <a href="https://watchtvepisodes.me/genre/action/">Action</a></li>
-                                <li id="menu-item-4953" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4953">
-                                    <a href="https://watchtvepisodes.me/genre/adventure/">Adventure</a></li>
-                                <li id="menu-item-4972" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4972">
-                                    <a href="https://watchtvepisodes.me/genre/talk/">Talk</a></li>
-                                <li id="menu-item-4973" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4973">
-                                    <a href="https://watchtvepisodes.me/genre/thriller/">Thriller</a></li>
-                                <li id="menu-item-4974" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4974">
-                                    <a href="https://watchtvepisodes.me/genre/tv-movie/">TV Movie</a></li>
-                                <li id="menu-item-4975" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4975">
-                                    <a href="https://watchtvepisodes.me/genre/war/">War</a></li>
-                                <li id="menu-item-4976" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4976">
-                                    <a href="https://watchtvepisodes.me/genre/war-politics/">War &#038; Politics</a></li>
-                                <li id="menu-item-4952" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4952">
-                                    <a href="https://watchtvepisodes.me/genre/action-adventure/">Action &#038; Adventure</a></li>
-                                <li id="menu-item-4977" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4977">
-                                    <a href="https://watchtvepisodes.me/genre/western/">Western</a></li>
+                                    <a href="">apokalyptischen</a></li>
+
                             </ul>
                         </li>
                     </ul>
