--- a/views/movies.html
+++ b/views/movies.html
@@ -49,6 +49,7 @@
                         </div>
                     </article>
                     {{end}}
+                    <div style="clear: both;width: 12px ;height: 12px"></div>
                 </div>
 
 
