--- a/views/home.html
+++ b/views/home.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="data">
                             <h3>
-                                <a href="/episode/{{.Id}}"> {{.MovieName}}</a></h3>
+                                <a href="/episode/{{.Id}}"> {{.DeName}}</a></h3>
                             <span>&nbsp;</span>
                             </div>
                     </article>
