--- a/views/common/footer.html
+++ b/views/common/footer.html
@@ -5,8 +5,8 @@
                 <div class="columenu">
                 </div>
                 <div class="fotlogo">
-                    <div class="logo"><img src="https://watchtvepisodes.me/wp-content/uploads/2019/02/Logomare.png"
-                                           alt="WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free"/>
+                    <div class="logo"><img src="/static/logo.png"
+                                           alt="OYO Anime"/>
                     </div>
                 </div>
             </div>
@@ -15,7 +15,7 @@
             <div class="fmenu">
                 <ul id="menu-jos-dreapta" class="menu">
                     <li id="menu-item-329"
-                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-329"><a href="/">Home</a>
+                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-329"><a href="/">Zuhause</a>
                     </li>
                 </ul>
             </div>
