--- a/views/common/header.html
+++ b/views/common/header.html
@@ -4,54 +4,14 @@
 <head>
 
     <meta charset="UTF-8" />
-    <link rel='apple-touch-icon' href='https://watchtvepisodes.me/wp-content/uploads/2018/11/TV.png' />
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta property="fb:admins" content="Warlam" />
-    <title>WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free</title>
-    <meta name="description" content="Watch Full Movie Stream and TV Series Online Free Stream in HD and 1080p on Openload. Watch movies in theaters online , free cinema movie stream and download." />
+    <link rel='apple-touch-icon' href='/static/logo.png' />
+
+    <title>OYO Anime</title>
+    <meta name="description" content="OYO Anime" />
     <link rel="canonical" href="https://watchtvepisodes.me/" />
     <link rel="next" href="https://epsiode/page/2/" />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free" />
-    <meta property="og:description" content="Watch Full Movie Stream and TV Series Online Free Stream in HD and 1080p on Openload. Watch movies in theaters online , free cinema movie stream and download." />
-    <meta property="og:url" content="/home" />
-    <meta property="og:site_name" content="WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:description" content="Watch Full Movie Stream and TV Series Online Free Stream in HD and 1080p on Openload. Watch movies in theaters online , free cinema movie stream and download." />
-    <meta name="twitter:title" content="WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free" />
-{{/*    <meta name="twitter:site" content="@watchtvepis0des" />*/}}
-{{/*    <script type='application/ld+json' class='yoast-schema-graph yoast-schema-graph--main'>{*/}}
-{{/*            "@context": "https://schema.org",*/}}
-{{/*            "@graph": [{*/}}
-{{/*                "@type": "WebSite",*/}}
-{{/*                "@id": "https://watchtvepisodes.me/#website",*/}}
-{{/*                "url": "https://watchtvepisodes.me/",*/}}
-{{/*                "name": "WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free",*/}}
-{{/*                "potentialAction": {*/}}
-{{/*                    "@type": "SearchAction",*/}}
-{{/*                    "target": "https://watchtvepisodes.me/?s={search_term_string}",*/}}
-{{/*                    "query-input": "required name=search_term_string"*/}}
-{{/*                }*/}}
-{{/*            },*/}}
-{{/*                {*/}}
-{{/*                    "@type": "CollectionPage",*/}}
-{{/*                    "@id": "https://watchtvepisodes.me/#webpage",*/}}
-{{/*                    "url": "https://watchtvepisodes.me/",*/}}
-{{/*                    "inLanguage": "en-US",*/}}
-{{/*                    "name": "WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free",*/}}
-{{/*                    "isPartOf": {*/}}
-{{/*                        "@id": "https://watchtvepisodes.me/#website"*/}}
-{{/*                    },*/}}
-{{/*                    "description": "Watch Full Movie Stream and TV Series Online Free Stream in HD and 1080p on Openload. Watch movies in theaters online , free cinema movie stream and download."*/}}
-{{/*                }]*/}}
-{{/*        }</script>*/}}
-{{/*    <link rel='dns-prefetch' href='//fonts.googleapis.com' />*/}}
-{{/*    <link rel='dns-prefetch' href='//s.w.org' />*/}}
-{{/*    <link rel="alternate" type="application/rss+xml" title="WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free &raquo; Feed" href="https://watchtvepisodes.me/feed/" />*/}}
-{{/*    <link rel="alternate" type="application/rss+xml" title="WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free &raquo; Comments Feed" href="https://watchtvepisodes.me/comments/feed/" />*/}}
+    <link rel="shortcut icon" type="image/x-icon" href="/static/logo.png"
+          media="screen"/>
     <link rel='stylesheet' id='wp-block-library-css' href='https://watchtvepisodes.me/wp-includes/css/dist/block-library/style.min.css' type='text/css' media='all' />
     <link rel='stylesheet' id='contact-form-7-css' href='https://watchtvepisodes.me/wp-content/plugins/contact-form-7/includes/css/styles.css' type='text/css' media='all' />
     <link rel='stylesheet' id='owl-carousel-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/front.owl.css' type='text/css' media='all' />
@@ -67,32 +27,9 @@
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/owlcarousel.js'></script>
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/idtabs.js'></script>
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/isrepeater.js'></script>
-{{/*    <script type='text/javascript'>var dtAjax = {*/}}
-{{/*            "url": "\/wp-admin\/admin-ajax.php",*/}}
-{{/*            "loading": "Loading..",*/}}
-{{/*            "afavorites": "Add to favorites",*/}}
-{{/*            "rfavorites": "Remove of favorites",*/}}
-{{/*            "remove": "Remove",*/}}
-{{/*            "isawit": "I saw it",*/}}
-{{/*            "send": "Data send..",*/}}
-{{/*            "updating": "Updating data..",*/}}
-{{/*            "error": "Error",*/}}
-{{/*            "pending": "Pending review",*/}}
-{{/*            "ltipe": "Download",*/}}
-{{/*            "sending": "Sending data",*/}}
-{{/*            "enabled": "Enable",*/}}
-{{/*            "disabled": "Disable",*/}}
-{{/*            "trash": "Delete",*/}}
-{{/*            "lshared": "Links Shared",*/}}
-{{/*            "ladmin": "Manage pending links",*/}}
-{{/*            "sendingrep": "Please wait, sending data..",*/}}
-{{/*            "ready": "Ready",*/}}
-{{/*            "deletelin": "Do you really want to delete this link?"*/}}
-{{/*        };</script>*/}}
+
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/min/front.ajax.2.2.0.js'></script>
-{{/*    <link rel='https://api.w.org/' href='https://watchtvepisodes.me/wp-json/' />*/}}
-{{/*    <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://watchtvepisodes.me/xmlrpc.php?rsd" />*/}}
-    <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://watchtvepisodes.me/wp-includes/wlwmanifest.xml" />
+   <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://watchtvepisodes.me/wp-includes/wlwmanifest.xml" />
     <script type='text/javascript'>jQuery(document).ready(function(a) {
             'false' == dtGonza.mobile && a(window).load(function() {
                 a('.scrolling').mCustomScrollbar({
@@ -108,24 +45,7 @@
             })
         });</script>
     <style type='text/css'>body{font-family:"Roboto",sans-serif}body{background:#000000}a,.home-blog-post .entry-date .date,.top-imdb-item:hover>.title a,.module .content .items .item .data h3 a:hover,.head-main-nav ul.main-header li:hover>a,.login_box .box a.register{color:#0f6dbf}.nav_items_module a.btn:hover,.pagination span.current,.w_item_b a:hover>.data span.wextra b i,.comment-respond h3:before,footer.main .fbox .fmenu ul li a:hover{color:#0f6dbf}header.main .hbox .search form button[type=submit]:hover,.loading,#seasons .se-c .se-a ul.episodios li .episodiotitle a:hover,.sgeneros a:hover,.page_user nav.user ul li a:hover{color:#0f6dbf}footer.main .fbox .fmenu ul li.current-menu-item a,.posts .meta .autor i,.pag_episodes .item a:hover,a.link_a:hover,ul.smenu li a:hover{color:#0f6dbf}header.responsive .nav a.active:before,header.responsive .search a.active:before,.dtuser a.clicklogin:hover,.menuresp .menu ul.resp li a:hover,.menuresp .menu ul.resp li ul.sub-menu li a:hover{color:#0f6dbf}.sl-wrapper a:before,table.account_links tbody td a:hover,.dt_mainmeta nav.genres ul li a:hover{color:#0f6dbf}.dt_mainmeta nav.genres ul li.current-cat a:before,.dooplay_player .options ul li:hover span.title{color:#0f6dbf}.head-main-nav ul.main-header li ul.sub-menu li a:hover,form.form-resp-ab button[type=submit]:hover>span,.sidebar aside.widget ul li a:hover{color:#0f6dbf}header.top_imdb h1.top-imdb-h1 span,article.post .information .meta span.autor,.w_item_c a:hover>.rating i,span.comment-author-link,.pagination a:hover{color:#0f6dbf}.letter_home ul.glossary li a:hover,.letter_home ul.glossary li a.active,.user_control a.in-list{color:#0f6dbf}.starstruck .star-on-png:before{color:#0f6dbf}.linktabs ul li a.selected,ul.smenu li a.selected,a.liked,.module .content header span a.see-all,.page_user nav.user ul li a.selected,.dt_mainmeta nav.releases ul li a:hover{background:#0f6dbf}a.see_all,p.form-submit input[type=submit]:hover,.report-video-form fieldset input[type=submit],a.mtoc,.contact .wrapper fieldset input[type=submit],span.item_type,a.main{background:#0f6dbf}.head-main-nav ul.main-header li a i,.post-comments .comment-reply-link:hover,#seasons .se-c .se-q span.se-o,#edit_link .box .form_edit .cerrar a:hover{background:#0f6dbf}.user_edit_control ul li a.selected,form.update_profile fieldset input[type=submit],.page_user .content .paged a.load_more:hover,#edit_link .box .form_edit fieldset input[type="submit"]{background:#0f6dbf}.login_box .box input[type="submit"],.form_post_lik .control .left a.add_row:hover,.form_post_lik .table table tbody tr td a.remove_row:hover,.form_post_lik .control .right input[type="submit"]{background:#0f6dbf}#dt_contenedor{background:#000000}.plyr input[type=range]::-ms-fill-lower{background:#0f6dbf}.menuresp .menu .user a.ctgs,.menuresp .menu .user .logout a:hover{background:#0f6dbf}.plyr input[type=range]:active::-webkit-slider-thumb{background:#0f6dbf}.plyr input[type=range]:active::-moz-range-thumb{background:#0f6dbf}.plyr input[type=range]:active::-ms-thumb{background:#0f6dbf}.tagcloud a:hover,ul.abc li a:hover,ul.abc li a.select,{background:#0f6dbf}.contact .wrapper fieldset input[type=text]:focus,.contact .wrapper fieldset textarea:focus,header.main .hbox .dt_user ul li ul li:hover > a,.login_box .box a.register{border-color:#0f6dbf}.module .content header h1{border-color:#0f6dbf}.module .content header h2{border-color:#0f6dbf}a.see_all{border-color:#0f6dbf}.top-imdb-list h3{border-color:#0f6dbf}.user_edit_control ul li a.selected:before{border-top-color:#0f6dbf}#dt_contenedor{background:url(https://watchtvepisodes.me/wp-content/uploads/2018/04/black-backgrounds-258.jpg);background-attachment:fixed}.poster{border-radius:10px}.featu{padding-left:20px;background:#e51010;border-radius:40px}.flashit{-webkit-animation:flash linear 2s infinite;animation:flash linear 2s infinite;{</style>
-{{/*    <link rel="icon" href="https://watchtvepisodes.me/wp-content/uploads/2018/03/cropped-apple-icon-152x152-32x32.png" sizes="32x32" />*/}}
-{{/*    <link rel="icon" href="https://watchtvepisodes.me/wp-content/uploads/2018/03/cropped-apple-icon-152x152-192x192.png" sizes="192x192" />*/}}
-{{/*    <link rel="apple-touch-icon-precomposed" href="https://watchtvepisodes.me/wp-content/uploads/2018/03/cropped-apple-icon-152x152-180x180.png" />*/}}
-{{/*    <meta name="msapplication-TileImage" content="https://watchtvepisodes.me/wp-content/uploads/2018/03/cropped-apple-icon-152x152-270x270.png" />*/}}
-{{/*    <script>(function(i, s, o, g, r, a, m) {*/}}
-{{/*            i['GoogleAnalyticsObject'] = r;*/}}
-{{/*            i[r] = i[r] ||*/}}
-{{/*                function() { (i[r].q = i[r].q || []).push(arguments)*/}}
-{{/*                },*/}}
-{{/*                i[r].l = 1 * new Date();*/}}
-{{/*            a = s.createElement(o),*/}}
-{{/*                m = s.getElementsByTagName(o)[0];*/}}
-{{/*            a.async = 1;*/}}
-{{/*            a.src = g;*/}}
-{{/*            m.parentNode.insertBefore(a, m)*/}}
-{{/*        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');*/}}
-{{/*        ga('create', 'UA-114921028-1', 'auto');*/}}
-{{/*        ga('send', 'pageview');</script>*/}}
+
 </head>
 
 <body data-rsssl=1 class="home blog">
@@ -133,8 +53,8 @@
     <header id="header" class="main">
         <div class="hbox">
             <div class="logo">
-                <a href="https://watchtvepisodes.me">
-                    <img src='https://watchtvepisodes.me/wp-content/uploads/2018/11/logo1.png' alt='WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free' /></a>
+                <a href="/home">
+                    <img src='/static/logo.png' alt='OYO Anime' /></a>
             </div>
             <div class="head-main-nav">
                 <div class="menu-meniu-sus-container">
