更新 侧边图栏。（添加模板方法，随机查取图片两张）

--- a/views/common/header.html
+++ b/views/common/header.html
@@ -69,36 +69,36 @@
                             <a href="/genre/action/">Genre</a>
                             <ul class="sub-menu">
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
-                                    <a href="">Aktion</a></li>
+                                    <a href="/movies/tags/Aktion">Aktion</a></li>
                                 <li id="menu-item-73949" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73949">
-                                    <a href="">Abenteuer</a></li>
+                                    <a href="/movies/tags/Abenteuer">Abenteuer</a></li>
                                 <li id="menu-item-73955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73955">
-                                    <a href="">Komödie</a></li>
+                                    <a href="/movies/tags/Komödie">Komödie</a></li>
                                 <li id="menu-item-4971" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4971">
-                                    <a href="">Theater</a></li>
+                                    <a href="/movies/tags/Theater">Theater</a></li>
                                 <li id="menu-item-4970" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4970">
-                                    <a href="">Fantasie</a></li>
+                                    <a href="/movies/tags/Fantasie">Fantasie</a></li>
                                 <li id="menu-item-4969" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4969">
-                                    <a href="">Harem</a></li>
+                                    <a href="/movies/tags/Harem">Harem</a></li>
                                 <li id="menu-item-4968" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4968">
-                                    <a href="">Historisches
+                                    <a href="/movies/tags/Historisches">Historisches
                                     </a></li>
                                 <li id="menu-item-4967" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4967">
-                                    <a href="">Idole</a></li>
+                                    <a href="/movies/tags/Idole">Idole</a></li>
                                 <li id="menu-item-4966" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4966">
-                                    <a href="">Isekai</a></li>
+                                    <a href="/movies/tags/Isekai">Isekai</a></li>
                                 <li id="menu-item-4965" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4965">
-                                    <a href="">Magische</a></li>
+                                    <a href="/movies/tags/Magische">Magische</a></li>
                                 <li id="menu-item-4964" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4964">
-                                    <a href="">Mädchen</a></li>
+                                    <a href="/movies/tags/Mädchen">Mädchen</a></li>
                                 <li id="menu-item-4963" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4963">
-                                    <a href="">Mecha</a></li>
+                                    <a href="/movies/tags/Mecha">Mecha</a></li>
                                 <li id="menu-item-4962" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4962">
-                                    <a href="">Musik</a></li>
+                                    <a href="/movies/tags/Musik">Musik</a></li>
                                 <li id="menu-item-4961" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4961">
-                                    <a href="">Geheimnis</a></li>
+                                    <a href="/movies/tags/Geheimnis">Geheimnis</a></li>
                                 <li id="menu-item-4960" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4960">
-                                    <a href="">apokalyptischen</a></li>
+                                    <a href="/movies/tags/apokalyptischen">apokalyptischen</a></li>
 
                             </ul>
                         </li>
