--- a/views/home.html
+++ b/views/home.html
@@ -57,7 +57,7 @@
                 <div class="fixed-sidebar-blank">
                     <aside id="media_image-7" class="widget widget_media_image">
                         <a href="/movies">
-                            <img width="300" height="169" src="https://img1.ak.crunchyroll.com/i/spire2/54c15675670ba44c1f98c3e11ba0cddf1515030877_thumb.jpg" class="image wp-image-93020 attachment-medium size-medium" alt="" style="max-width: 100%; height: auto;" srcset="https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-300x170.png 300w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-768x432.png 768w, https://watchtvepisodes.me/wp-content/uploads/2019/01/Logo_Netflix-1024x576.png 1024w" sizes="(max-width: 300px) 100vw, 300px" /></a>
+                            <img width="300" height="169" src="{{randomImg}}" class="image wp-image-93020 attachment-medium size-medium" alt="" style="max-width: 100%; height: auto;" sizes="(max-width: 300px) 100vw, 300px" /></a>
                     </aside>
                   </div>
             </div>
