--- a/views/movies.html
+++ b/views/movies.html
@@ -72,14 +72,14 @@
                 <div class="fixed-sidebar-blank">
                     <aside id="media_image-7" class="widget widget_media_image"><a href="/network/netflix/"><img
                                     width="300" height="169"
-                                    src="https://img1.ak.crunchyroll.com/i/spire4/f26a43ba646fa169a232726fe578d0cd1279145968_thumb.jpg"
+                                    src="{{randomImg}}"
                                     class="image wp-image-93020 attachment-medium size-medium" alt=""
                                     style="max-width: 100%; height: auto;"
                                     srcset=""
                                     sizes="(max-width: 300px) 100vw, 300px"/></a></aside>
                         <div class="textwidget custom-html-widget"><a
                                     href="https://watchtvepisodes.me/tvshows/the-walking-dead/"><img
-                                        src="https://img1.ak.crunchyroll.com/i/spire1/445d2fd74c924440b1ca61600789e2861383180162_thumb.jpg" alt="" width="300" height="550"
+                                        src="{{randomImg}}" alt="" width="300" height="550"
                                         class="alignnone size-full wp-image-95958"/></a></div>
                     </aside>
                 </div>
